--- a/client/src/app/admin/admin-panel/admin-panel.component.html
+++ b/client/src/app/admin/admin-panel/admin-panel.component.html
@@ -4,13 +4,13 @@
         <tab heading="User management" 
             *appHasRole="['Admin']">
             <div class="container">
-                <app-user-management></app-user-management>
+                <app-admin-user-management></app-admin-user-management>
             </div>
         </tab>
         <tab heading="Photo management" 
             *appHasRole="['Admin', 'Moderator']">
             <div class="container">
-                <app-photo-management></app-photo-management>
+                <app-admin-photo-management></app-admin-photo-management>
             </div>
         </tab>
     </tabset>
